<resources>
    <string name="app_name">Assignophobia</string>
    <string name="slogan">Sharing Without Sharing</string>
    <string name="greetings">Hello, Ms. Nagia</string>
    <string name="subject_1">System</string>
    <string name="subject_2">Android</string>
    <string name="subject_3">WebDev</string>
    <string name="subject_4">Database</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_t_have_an_account">Dont\'t have an account ?</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an account ?</string>
    <string name="profile">Profile</string>
    <string name="whispered">Whispered</string>
    <string name="memed">Memed</string>
    <string name="save">Save</string>
    <string name="student_email">Student Email</string>
    <string name="student_name">Student Name</string>
    <string name="college">College</string>
    <string name="student_number">student Number</string>
    <string name="invite">Invite</string>
    <string name="invite_placeholder">Invite to the app... Inviting to the app gives you the chance to share the app and help others as well.</string>
    <string name="copy">copy</string>
    <string name="whisper">Whisper</string>
    <string name="image_name">Image Name</string>
    <string name="assignment_view_placeholder">Write Your Assignment Here..</string>
    <string name="post">post</string>
    <string name="enter_date">Enter Date</string>
    <string name="invite_code">Invite Code</string>
    <string name="fadinBar_description">bottom fading bar</string>
    <string name="fab_description">Floating Actionbar Button for opening whisper activity.</string>
    <string name="your_invite_code_is">Your Invite code is :</string>
</resources>