<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.ProfileActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="35dp"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        app:backgroundTint="@color/white_800"
        app:cornerRadius="8dp"
        app:elevation="8dp"
        app:icon="@drawable/round_arrow_back"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="18dp"
        app:iconTint="@color/black_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/black_200"
        app:strokeWidth="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/itim"
        android:text="@string/profile"
        android:textColor="@color/black_900"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profile_view"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="20dp"
        android:src="@color/orange_200"
        android:foregroundTint="@color/black_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:riv_corner_radius="17dp"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profile_view_foreground"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_margin="20dp"
        android:src="@drawable/profile_placeholder"
        android:foregroundTint="@color/black_200"
        app:layout_constraintStart_toStartOf="@id/profile_view"
        app:layout_constraintBottom_toBottomOf="@id/profile_view"
        app:layout_constraintTop_toTopOf="@id/profile_view"
        app:layout_constraintEnd_toEndOf="@id/profile_view"
        app:riv_corner_radius="17dp"/>


    <TextView
        android:id="@+id/whispered_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/itim"
        android:text="@string/whispered"
        android:textColor="@color/orange_500"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/memed_title"
        app:layout_constraintStart_toEndOf="@id/profile_view"
        app:layout_constraintTop_toTopOf="@id/profile_view" />

    <TextView
        android:id="@+id/memed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/itim"
        android:text="@string/memed"
        android:textColor="@color/orange_500"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/whispered_title"
        app:layout_constraintTop_toTopOf="@id/profile_view" />

    <TextView
        android:id="@+id/whispered_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/whispered_title"
        app:layout_constraintStart_toStartOf="@id/whispered_title"
        app:layout_constraintEnd_toEndOf="@id/whispered_title"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/memed_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/memed_title"
        app:layout_constraintStart_toStartOf="@id/memed_title"
        app:layout_constraintEnd_toEndOf="@id/memed_title"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/profile_view"
        app:layout_constraintTop_toBottomOf="@id/profile_view"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/itim"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/name_view"
        app:layout_constraintTop_toBottomOf="@id/name_view"
        android:fontFamily="@font/itim"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/student_number_edit_view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/student_number"
        app:boxStrokeColor="@color/orange_700"
        app:boxStrokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/email_view"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/college_edit_view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/college"
        app:boxStrokeColor="@color/orange_700"
        app:boxStrokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/student_number_edit_view"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/college_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/student_name_edit_view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/student_name"
        app:boxStrokeColor="@color/orange_700"
        app:boxStrokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/college_edit_view"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/student_email_edit_view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/student_email"
        app:boxStrokeColor="@color/orange_700"
        app:boxStrokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/student_name_edit_view"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/save"
        android:textColor="@color/white_900"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_email_edit_view" />

</androidx.constraintlayout.widget.ConstraintLayout>