<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WhisperActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="35dp"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        app:backgroundTint="@color/white_800"
        app:cornerRadius="8dp"
        app:elevation="8dp"
        app:icon="@drawable/round_arrow_back"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="18dp"
        app:iconTint="@color/black_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/black_200"
        app:strokeWidth="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/itim"
        android:text="@string/whisper"
        android:textColor="@color/black_900"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/upload_button"
        android:layout_width="95dp"
        android:layout_height="106dp"
        app:riv_corner_radius="8dp"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        android:layout_marginTop = "40dp"
        android:src="@drawable/uploadbutton"
        app:riv_border_width="2dp"
        app:riv_border_color="@color/black_150"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/image_name_view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/image_name"
        app:boxStrokeColor="@color/orange_700"
        app:boxStrokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="@id/upload_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/upload_button"
        app:layout_constraintTop_toTopOf="@id/upload_button"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/image_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/whisper_assignment_text_view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:gravity="top"
        android:hint="@string/assignment_view_placeholder"
        app:boxStrokeColor="@color/orange_700"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/assignment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:textAlignment="gravity" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_picker_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_date"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:endIconDrawable="@drawable/calender"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/whisper_assignment_text_view"
        app:layout_constraintStart_toStartOf="@id/whisper_assignment_text_view"
        app:layout_constraintTop_toBottomOf="@id/whisper_assignment_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_picker_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="none"
            android:maxLength="10"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/post"
        android:textColor="@color/white_900"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_picker_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>