<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InviteActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="35dp"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        app:backgroundTint="@color/white_800"
        app:cornerRadius="8dp"
        app:elevation="8dp"
        app:icon="@drawable/round_arrow_back"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="18dp"
        app:iconTint="@color/black_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/black_200"
        app:strokeWidth="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/itim"
        android:text="@string/invite"
        android:textColor="@color/black_900"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button" />


    <TextView
        android:id="@+id/invite_placeholder"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/itim"
        android:text="@string/invite_placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintBottom_toTopOf="@id/invite_code"/>

    <TextView
        android:id="@+id/invite_code"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/itim"
        android:text="Your Invite code is : "
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invite_placeholder"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/copy_button"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/copy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/copy"
        android:textColor="@color/white_900"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>