<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_900"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_900"
            app:contentScrim="@color/white_900"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="180dp"
                android:fontFamily="@font/atomic_age"
                android:text="@string/app_name"
                android:textColor="@color/orange_500"
                android:textSize="28sp"
                android:textStyle="bold" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="7dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/slogan"
                        android:fontFamily="@font/itim"/>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/profile_button"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        app:cornerRadius="20dp"
                        android:layout_marginEnd="25dp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            
            <RelativeLayout
                android:id="@+id/greetings_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/app_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greetings"
                    android:fontFamily="@font/itim"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/circular_button"
                    android:layout_width="35dp"
                    android:layout_height="46dp"
                    app:cornerRadius="28dp"
                    app:icon="@drawable/logut_symbol"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="18dp"
                    app:iconTint="@color/red_500"
                    app:strokeWidth="0dp"
                    app:backgroundTint="@color/red_300"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    app:rippleColor="@color/red_100"/>


            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/posts_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/greetings_relative_layout"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="70dp"
                android:overScrollMode="never">


            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>